more Login State Stuff

--- a/FlaskExample/templates/modal/register.html
+++ b/FlaskExample/templates/modal/register.html
@@ -8,6 +8,13 @@
             </div>
             <div class="modal-body">
                 <form id="registerForm">
+                    <div class="col-12">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" required name="name"
+                            aria-describedby="nameHelp">
+                        <div id="nameHelp" class="form-text"></div>
+                    </div>
 
                     <div class="mb-3">
                         <label for="username" class="form-label">Benutzername</label>
@@ -27,6 +34,7 @@
                     </div>
 
                     <div id="alert_register"></div>
+                </div>
 
             </div>
 
